presigned-url generation can handle multiple HTTP Methods, add unique constraints for Many-to-Many relationships, added 2 playlist controller to upsert a playlist and to add a song to a playlist